# zero2prod

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: audit.yml  general.yml
configuration/: base.yaml  production.yaml
docs/: general.md
docs/chp10/: general.md
docs/chp3/: actix.md  serde.md  sqlx.md
docs/chp4/: general.md
docs/chp6/: general.md
docs/chp7/: general.md
docs/chp8/: general.md
migrations/: 20240111095108_create_subscriptions_table.sql  20240719094610_add_status_to_subscriptions.sql  20240719094918_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
