[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.8.0"
chrono = "0.4.38"
config = { version = "0.14.0", default-features = false, features = ["yaml"] }
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = "1.38.0"
uuid = { version = "1.9.1", features = ["v4"] } 
