[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.8.0"
chrono = "0.4.38"
claim = "0.5.0"
config = { version = "0.14.0", default-features = false, features = ["yaml"] }
fake = "2.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde-aux = "4.5.0"
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.38.0", features = ["rt", "macros"] }
tracing = { version = "0.1.40", features = ["log"] } 
tracing-actix-web = "0.7.11"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
uuid = { version = "1.9.1", features = ["v4"] } 
validator = "0.18.1"

[dev-dependencies]
once_cell = "1.19.0"
wiremock = "0.6.0"
